Bug fix
invisible on mobile viewports - now visible

--- a/styles/responsive.scss
+++ b/styles/responsive.scss
@@ -82,7 +82,8 @@
     }
   }
   .slider {
-    background: none;
+    background-size: auto 300px;
+    background-position: 110% 120px;
     padding: 0px 0px 125px;
 
     h1 {
@@ -119,5 +120,12 @@
   }
   .top-header {
     padding: 25px 0px;
+  }
+}
+
+@media screen and (max-width: map-get($grid-breakpoints, sm)) {
+  .slider {
+    background-size: 420px auto;
+    background-position: right -200px bottom -60px;
   }
 }
